[gd_scene load_steps=3 format=3 uid="uid://bnpnns3m6kg0k"]

[ext_resource type="Script" path="res://scenes/scripts/settings.gd" id="1_nhjyu"]
[ext_resource type="Texture2D" uid="uid://cfdoxclhv58fy" path="res://graphics/settings/settingsPage.png" id="1_pfwsx"]

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_nhjyu")

[node name="Backdrop" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pfwsx")

[node name="SettingsHeader" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 464.0
offset_top = 32.0
offset_right = 776.0
offset_bottom = 194.0
theme_override_font_sizes/normal_font_size = 1
theme_override_font_sizes/bold_font_size = 85
bbcode_enabled = true
text = "[b]Settings[/b]"
fit_content = true

[node name="ContastLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 264.0
offset_right = 224.0
offset_bottom = 345.0
scale = Vector2(0.75, 0.75)
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "[b]Contrast[/b]"
fit_content = true

[node name="BrightnessLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 192.0
offset_right = 272.0
offset_bottom = 273.0
scale = Vector2(0.75, 0.75)
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "[b]Brightness[/b]"
fit_content = true

[node name="SaturationLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 328.0
offset_right = 272.0
offset_bottom = 409.0
scale = Vector2(0.75, 0.75)
theme_override_font_sizes/bold_font_size = 50
bbcode_enabled = true
text = "[b]Saturation[/b]"
fit_content = true

[node name="SaturationSlider" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 216.0
offset_top = 352.0
offset_right = 384.0
offset_bottom = 368.0
scale = Vector2(0.75, 0.75)
min_value = 0.06
max_value = 4.0
step = 0.01
value = 1.0

[node name="ContrastSlider" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 192.0
offset_top = 288.0
offset_right = 360.0
offset_bottom = 304.0
scale = Vector2(0.75, 0.75)
min_value = 0.115
max_value = 8.0
step = 0.01
value = 0.995

[node name="BrightnessSlider" type="HSlider" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 240.0
offset_top = 224.0
offset_right = 408.0
offset_bottom = 240.0
scale = Vector2(0.75, 0.75)
min_value = 0.06
max_value = 4.0
step = 0.01
value = 1.0

[node name="CloseBTN" type="Button" parent="."]
process_mode = 3
layout_mode = 0
offset_left = 464.0
offset_top = 544.0
offset_right = 672.0
offset_bottom = 616.0
text = "Close"

[connection signal="value_changed" from="SaturationSlider" to="." method="_on_saturation_slider_value_changed"]
[connection signal="value_changed" from="ContrastSlider" to="." method="_on_contrast_slider_value_changed"]
[connection signal="value_changed" from="BrightnessSlider" to="." method="_on_brightness_slider_value_changed"]
[connection signal="pressed" from="CloseBTN" to="." method="_on_close_btn_pressed"]
